--- a/teams-u12g.html
+++ b/teams-u12g.html
@@ -2,16 +2,18 @@
   <div class="col1">
     <h3 style="margin-top: 10px">CONTACTS</h3>
     <ul>
-      <li><b>Team Manager: </b><span class="nowrap">TBD</span></li>
-      <li><b>Head Coach: </b><span class="nowrap">Mark Hindson</span></li>
+      <li>
+        <b>Team Manager: </b><span class="nowrap">Amanda Beveridge - <a href="tel:0403 833 868">0403 833 868</a></span>
+      </li>
+      <li><b>Head Coach: </b><span class="nowrap">Ben Beveridge</span></li>
       <li><b>Assistant Coach: </b><span class="nowrap">TBD</span></li>
-      <li><b>Trainer: </b><span class="nowrap">Heather Holdstock</span></li>
+      <li><b>Trainer: </b><span class="nowrap">Beccy Dawber</span></li>
     </ul>
   </div>
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">Monday 5:30pm - 7:00pm, Wednesday 5:30pm - 7:00pm</p>
+      <p style="margin: 0">Thursday 5:30pm - 6:30pm</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
