--- a/teams-u12m.html
+++ b/teams-u12m.html
@@ -3,57 +3,32 @@
     <h3 style="margin-top: 10px">CONTACTS</h3>
     <ul>
       <li>
-        <b>Team Manager: </b><span class="nowrap">Rebecca Bone - <a href="tel:0400 865 934">0400 865 934</a></span>
+        <b>Team Manager: </b><span class="nowrap">Julie Humble - <a href="tel:0411489201">0411489201</a></span>
       </li>
       <li>
-        <b>Team Manager: </b><span class="nowrap">Megan Guymer - <a href="tel:0421 508 295">0421 508 295</a></span>
+        <b>Team Manager: </b><span class="nowrap">Jessica Randall - <a href="tel:0421 114 072">0421 114 072</a></span>
       </li>
       <li>
-        <b>Head Coach: </b><span class="nowrap">Tim Cincotta - <a href="tel:0413 886 251">0413 886 251</a></span>
+        <b>Head Coach: </b><span class="nowrap">Mark Randall - <a href="tel:0423 442 051">0423 442 051</a></span>
       </li>
-      <li><b>Assistant Coach: </b><span class="nowrap">TBD</span></li>
-      <li><b>Trainer: </b><span class="nowrap">Heather Holdstock</span></li>
+      <li><b>Assistant Coach: </b><span class="nowrap">Gordon Watt</span></li>
+      <li><b>Trainer: </b><span class="nowrap">Luke Baker</span></li>
     </ul>
   </div>
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">Monday 5:30pm - 6:30pm, Wednesday 5:30pm - 7pm</p>
+      <p style="margin: 0">Wednesday 6:00pm - 7:00pm</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
-      <p style="margin: 0">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u12/dadcfd68"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </p>
-      <p style="margin: 0">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u12-c/f29298dc"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </p>
-      <p style="margin: 0">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u12/dadcfd68/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </p>
+      <p style="margin: 0">Fixture: TBD</p>
+      <p style="margin: 0">Results: TBD</p>
+      <p style="margin: 0">Ladder: TBD</p>
     </div>
   </div>
 </div>
 <div>
   <h3 style="margin-top: 10px">MATCH REPORTS</h3>
-  <ul style="column-count: 3">
-    <li><a href="/u12m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
-    <li><a href="/u12m-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
-    <li><a href="/u12m-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
-  </ul>
+  <p>Coming Soon...</p>
 </div>
