--- a/teams-u13b-match-report.html
+++ b/teams-u13b-match-report.html
@@ -1,237 +1,8 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
-    if (window.location.search.includes('id=r01')) jQuery('#r01').show();
-    else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
-    else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
-    else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
-    else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
-    else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
-    else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
-    else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
-    else if (window.location.search.includes('id=r13')) jQuery('#r13').show();
-    else jQuery('#not-found').show();
+    jQuery('#not-found').show();
   });
 </script>
-<div id="r01" style="display: none">
-  <h3>Round 1</h3>
-  <p>
-    Congratulations to Seth and Jaxon both playing their 50th games today. These two boys have been fantastic players for Bayswater during their junior career.
-    We hope for another 50 games at least.
-  </p>
-  <p>The following players also played their first games with Bayswater today:</p>
-  <ul>
-    <li>Cooper Leach</li>
-    <li>Austin</li>
-    <li>Charles</li>
-    <li>Xane&nbsp;</li>
-  </ul>
-  <p>Well done to these boys and welcome to the team.</p>
-  <p>
-    Today was a nice start to the season with all players contributing throughout the day. Our drive from Dusty, Hamish and Marley in the middle all day was
-    outstanding. These boys will be a solid midfield unit this season.
-  </p>
-  <p>
-    I'd also like to say thank you to the 8 boys who played a quarter with Croydon South. I know they put in their best efforts when playing with them. As
-    mentioned a few months back, the change to the even up rule may see more games where this happens.
-  </p>
-  <p>
-    We saw 10 individual goal kickers, showing great team work throughout the day. We were even able to talk Seth out of the backline for a quarter, giving him
-    the chance to score a rare goal.
-  </p>
-  <p>
-    Overall, both Gavin and I were pleased with the effort today. There were some sensational passages of play and great team unity. We expect to see continual
-    improvement over the coming weeks as they boys get back into the flow of the season. This improvement is critical as harder games come our way.
-  </p>
-  <p>Go Baysie.</p>
-</div>
-<div id="r02" style="display: none">
-  <h3>Round 2</h3>
-  <p>A well fought out win by the boys today, in a tough 4 quarter tussle against a solid opponent.&nbsp;</p>
-  <p>
-    Today we rotated our midfield given the size of the ground. This gave an opportunity to Seth, Phoenix, Cooper Leach, Marley, Dusty and Cooper Lancaster all
-    spending time on the ball.
-  </p>
-  <p>We also rotated our ruck, giving Lachie, Hamish and Kirby time in this spot.</p>
-  <p>A real standout game today by Cooper Lancaster, who looked at ease playing through the midfield. This was definitely his most complete game so far.</p>
-  <p>
-    Our backline also had its busiest day for some time, and they all stood strong resisting many attacks. Dusty played well taking several intercept marks,
-    with Lachie and Kirby being extremely solid across half back. Charles, playing in just his second game, used his body positioning with great skill.
-  </p>
-  <p>
-    We spoke with boys today about overusing the ball as we looked much better when kicking long. This overuse cost us dearly at times and could've had a
-    significant impact on the end result.
-  </p>
-  <p>
-    Overall a good result against, but as I said last week, every game will be challenging and the boys will need to be near their best each week if we're to
-    remain competitive.
-  </p>
-  <p>We are looking forward to the boys continuing to improve every week.</p>
-</div>
-<div id="r03" style="display: none">
-  <h3>Round 3</h3>
-  <p>
-    Our winning streak has come to an end. 18 home and away wins in a row is an outstanding effort from this team and we should all be very proud of this
-    sustained success.
-  </p>
-  <p>
-    We were competitive all day yesterday and remained in the game until the final few minutes. Our conversion on goal was one of the key factors in the result.
-    Kicking 9 points in a row hurt. You also get those days where the ball bounces the wrong way, you run under the ball or a kick lands just short or you
-    narrowly miss a goal. Yesterday was that day.
-  </p>
-  <p>
-    Our conversations at the breaks really focused on the lack of hard ball gets, being accountable to each other, talk on the field and quick ball movement.
-    These are the next steps the team need to take to become a better unit.
-  </p>
-  <p>Saying this, there were positives yesterday, there were some great passages of play. The drive from our back was exceptional.</p>
-  <p>
-    One of stand out plays was an Dusty attacking the ball from full back, kicking to Phoenix on the wing, he then followed up his kick taking the handball from
-    Phoenix going for a run and kicking it to our advantage in the forward line, just narrowly missing a goal. This is a key example of all of the things we've
-    been talking about and we hope that this type of play inspires others in the team to do the same.
-  </p>
-  <p>Yesterday we did throw some of the magnets around playing some of the boys out of position, we want the boys to be comfortable in multiple positions.</p>
-  <p>
-    What we are impressed with is the development of new players, such as Nolan, Xane and Charles. We know these boys need game time to improve but we can see
-    glimpses already.
-  </p>
-  <p>This week's game will be another tough one and communication and hard ball gets will be the focus of this week's training.</p>
-</div>
-<div id="r04" style="display: none">
-  <h3>Round 4</h3>
-  <p>In the true spirit of Anzac day, our boys went into a game with 3 injured players bringing us down to 17.&nbsp;</p>
-  <p>We set some team goals today, quarter by quarter and broken up into sections of the ground, forwards, midfield and defenders.&nbsp;</p>
-  <p>
-    I think the boys tried their best to fulfil those goals each quarter. Chirnside Park got the jump on the boys early, our communication was down, which is
-    something we are really trying to emphasise and work on with the boys at training.&nbsp;
-  </p>
-  <p>
-    In the second quarter I asked the forwards to out score their opponent, and they did, kicking 1 goal 1, to Chirnside's 1 point. There was some great
-    passages of play, and good link up footy, that the boys played so well. We went into the half down, but not beaten.&nbsp;
-  </p>
-  <p>
-    Going into the 3rd quarter, only 2 goals down I really felt the boys were in this game. The ball did not bounce our way, but the boys pressed on. Our
-    pressure on the ball was good in parts and our delivery was mostly on point, the boys skill level is definitely increasing game by game. Chirnside know how
-    to play their ground though, they kicked long with the wind, and got 4 goals. The back line was attacking the ball at almost every contest, with at least
-    one cheeky goal scored by a wicked bounce.&nbsp;
-  </p>
-  <p>
-    In the last quarter we were 40 points down. I knew the boys were tired, and I asked them to really dig deep and finish this game with pride. The boys really
-    came together then, they put their bodies on the line, they played on when they could, they ran out of the backline in numbers and drove that ball forward
-    as a TEAM. Cooper L, ran out of the back line with protection, delivering the ball to Seth then he hit Lachy on the chest, that was probably the play of the
-    day for me and shows what you boys are really capable of !! We repeated almost that same play not long after, and Nolan took a great mark and delivered the
-    ball beautifully again to CHF. We out scored our opponent again in the last quarter, to which I was super proud of the effort you all put in today. You
-    didn't lie down and give up, you showed true fighting spirit and showed us how good you boys really can be, when you play for each other.<br />&nbsp;<br />Congratulations
-    to Lachy for winning the Anzac medal today as awarded by Chirnside Park.&nbsp;
-  </p>
-  <p>Guys there are so many positives out of today, keep your heads up.&nbsp;</p>
-  <p>We'd also like to express our condolences to the Dinnage family.&nbsp;</p>
-</div>
-<div id="r05" style="display: none">
-  <h3>Round 5</h3>
-  <p>
-    Congratulations to Cooper Leach who played his 50th game on Sunday. He had been sitting on 49 games for 3 weeks. It was great to have him back in the team.
-  </p>
-  <p>It was also great to get back on the winners board after two losses.</p>
-  <p>We had 9 individual goal kickers, led by Lachie with 7 majors, with Dusty, Cooper Leach, Phoenix and Marley all kicking multiple goals.</p>
-  <p>
-    Our game plan was to come out and assert some early dominance, so we decided to start with taller players in the middle, luckily this paid off creating an
-    early lead and by half time the game was pretty much over.
-  </p>
-  <p>Some other stand outs for the game:-</p>
-  <p>
-    Nolan for his tireless gut running up and down the wing all day. He helped in defence and created options in our forward line. He continues to improve each
-    week. What is even more astounding is the fact he hadn't touched a football until about 3 months ago and is still learning the rules.
-  </p>
-  <p>Ben for his last quarter playing in the midfield. Ben had been down on confidence and spending time on the ball saw his natural game style come back.</p>
-  <p>Austin, for his multiple 1% plays that don't count as a stat but helps the team</p>
-  <p>Cooper Lancaster for his 3 bounce run out of full back....wow, sometimes it looks like his feet don't hit the ground</p>
-  <p>
-    Overall we were pleased with the team game. All players worked together and it was the game style we've been working on for some time, so it's great to see
-    it come off.
-  </p>
-  <p>Well done to the boys on a great win.</p>
-  <p>P.S the ladder is up, the game against Croydon South didn't count as they were relegated after round 2, so we are sitting on 2 wins &amp; 2 losses.</p>
-</div>
-<div id="r06" style="display: none">
-  <h3>Round 6</h3>
-  <p>This round was a BYE</p>
-</div>
-<div id="r07" style="display: none">
-  <h3>Round 7</h3>
-  <p>
-    Hi Baysie family,<br />&nbsp;<br />Today was a great day for footy, coming off a bye, we played the Basin on their home patch. After such a big win last
-    time against them, we told the boys to be prepared for anything and they were.&nbsp;<br />We asked the boys to get 4 goals in the first quarter and they
-    did, we went big in the middle of the ground and it proved to work today even in wet weather footy. Dusty kicked all 4 goals in the first quarter with some
-    beautiful delivery to him, mixed in with sheer determination and wanting the footy. As I said to Dusty today from a coaching point of view, his effort and
-    team play was 100%.&nbsp;
-  </p>
-  <p>
-    Moving the magnets round a bit in the 2nd quarter, proved as a team, we play Bayswater football best. On a wet and cold day the 2nd quarter proved to be a
-    bit tougher, the Basin came out hard and the footy became quite scrappy. Then the boys dug deep and played Bayswater footy, again delivering the ball to
-    Lachy was on point, he secured us all 3 goals in the second. I asked the boys to get me another 4 goals. We kicked 3 .4, which was great to see in such
-    trying conditions.&nbsp;
-  </p>
-  <p>
-    Going into the 3rd quarter 7 goals up, we told the boys to have fun, swapped most of the backs to forward, and played some players way out of their regular
-    position. I am loving the mix and flow that the boys have developed over this year! Kirby in the ruck most of the day was great to see. The 3rd quarter
-    proved that our boys are just gelling together, Ayden, Xane, competed very well. Ayden in particular, you got your 1 tackle and 1 shepherd that I asked you
-    for at the start of the game. It's the little goals we set each week guys, that can make a big difference. Everybody is really starting to chip in and be
-    part of our team. This is very important to see, especially from a coaches point of view. Charley, and Maison contributed with a cheeky goal on the board,
-    making it a 5 goal quarter.&nbsp;
-  </p>
-  <p>
-    In the last quarter we really played with the magnets, putting Seth into full forward, Phoenix into CHF. Nolan and Ayden onto the ball. Boys, I know that we
-    really threw you out of your comfort zone, but it was great to watch, your confidence is just growing more and more each week. We retired Dusty to full
-    back, after a 6 goal haul. Lachy copped a hard tackle and was done for the day mid way through the last (he's ok ) we thought we'd play it more cautiously,
-    with such a lead. Phoenix got himself a couple of goals also.&nbsp;
-  </p>
-  <p>
-    We as coaches only ask for you boys to compete and today we had 18 competitors on the ground. Can't ask for any more than that. All and all when you boys
-    are switched on and playing beautiful football you are very hard to beat. We love watching this team grow so much this year, keep it up lads!&nbsp;
-  </p>
-</div>
-<div id="r08" style="display: none">
-  <h3>Round 8</h3>
-  <p>
-    Hi Baysie family,&nbsp;<br />Today we played upper gully. The boys' attitude before the game seemed that they had already notched this game up as a win. So
-    once we got them focused on the task at hand they really switched on. We started the game with a moderate mid field, putting Charlie Dinnage in the middle
-    proved a good move, strong forward line and strong backline. I asked the boys to score 3 goals in the first quarter and they got 7 coming out of the blocks,
-    the best I've seen yet. The team work was amazing, the talk on the field was great and the boys spirits were high.
-  </p>
-  <p>
-    Going into the second quarter we had a comfortable lead, so I moved the magnets around again playing players out of their comfort zone. As stated last night
-    at round up this is a coaches dream come true, to be able to move players all over the ground at any time is such a delight, and it helps the boys grow in
-    their confidence. The boys played away and put another 4 goals on the board, maintaining our lead. Again the teamwork talk and 1% club were at its best this
-    quarter, the boys really have benefited from the 3 man weave, moving the ball quickly and consistently, the link up football has become a great thing to
-    watch.<br />&nbsp;<br />Heading into the 3rd quarter we had a dominant lead of 50 points, so again we now moved most of the back line forward and vice
-    versa. We put some of our players in the middle who haven't really had time on the ball this year, again this is to get kids into the action and help grow
-    confidence and respect for our great game. By the end of the 3rd quarter we had a commanding lead of 70 points, again the link up play the fluidity of the
-    boys hitting targets making space really is paying dividends.&nbsp;
-  </p>
-  <p>
-    In the 4th quarter I told the boys to go out and have fun. I put Lachy in the ruck with Ben, Austin and Nolan in the middle with him. It's the little things
-    that make up a team game, and these boys did their best. Ben got a small tap on to another player which then opened the door for a more penetrative kick
-    into our forward line resulting in a goal. These little but massive things happened all day. Jaxson was another in the last quarter who put himself on the
-    line and attacked the ball and it spilt our way, resulting in a goal.&nbsp;
-  </p>
-  <p>
-    Boys my only gripe is our structure goes to hell when we are winning, too many boys chasing goals and kicks within our forward 50 mtr. The more we focus on
-    our strengths and structure during the games the more repeat inside 50's we get offering more chances on goal.&nbsp;
-  </p>
-  <p>
-    We had multiple goal kickers throughout the day Kirby kicking a PB 4 goals in the game, but I think we missed one mate cause according to stat's you got 3
-    so sorry Kirby. Cooper Lancaster, opened his account in the last quarter kicking 3 goals, and the one I missed was Tom's ripper from the point post.
-    According to sources just a straight drop punt sailed through the big sticks.&nbsp;
-  </p>
-  <p>
-    Awards went to Kirby, Charles, Ben and Austin for this round, and our player of the rounds was Dusty, his commitment to the team game is really coming along
-    and it's great to see his focus and determination to get better for himself and his team mates.&nbsp;
-  </p>
-  <p>Good luck boys stay focused and let's start preparing for next week.</p>
-</div>
-<div id="r13" style="display: none">
-  <h3>Round 13</h3>
-  <p>This round was a BYE</p>
-</div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
   <p>Sorry, we couldn't find a matching match report.</p>
