--- a/teams-u16b.html
+++ b/teams-u16b.html
@@ -3,22 +3,21 @@
     <h3 style="margin-top: 10px">CONTACTS</h3>
     <ul>
       <li>
-        <b>Team Manager: </b><span class="nowrap">Clare Griffin - <a href="tel:0402 719 061">0402 719 061</a></span>
+        <b>Team Manager: </b><span class="nowrap">Mandy Beattie - <a href="tel:0424 788 297">0424 788 297</a></span>
       </li>
       <li>
-        <b>Team Manager: </b><span class="nowrap">Tim Groenewegen - <a href="tel:0417 103 823">0417 103 823</a></span>
+        <b>Team Manager: </b><span class="nowrap">Michelle Willoughby - <a href="tel:0419 855 744">0419 855 744</a></span>
       </li>
-      <li>
-        <b>Head Coach: </b><span class="nowrap">Daniel Fitzpatrick - <a href="tel:0428 115 998">0428 115 998</a></span>
-      </li>
-      <li><b>Assistant Coach: </b><span class="nowrap">Andrew Harrison</span></li>
-      <li><b>Trainer: </b><span class="nowrap">TBD</span></li>
+      <li><b>Head Coach: </b><span class="nowrap">Jake Dawber</span></li>
+      <li><b>Assistant Coach: </b><span class="nowrap">Steve Bickers</span></li>
+      <li><b>Assistant Coach: </b><span class="nowrap">Jono Merry</span></li>
+      <li><b>Trainer: </b><span class="nowrap">Beccy Dawber</span></li>
     </ul>
   </div>
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">Friday</p>
+      <p style="margin: 0">Monday 5:00pm - 6:30pm, Wednesday 5:00pm - 6:30pm</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
