--- a/teams-u16g-match-report.html
+++ b/teams-u16g-match-report.html
@@ -1,258 +1,8 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
-    if (window.location.search.includes('id=r01')) jQuery('#r01').show();
-    else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
-    else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
-    else if (window.location.search.includes('id=r04')) jQuery('#r04').show();
-    else if (window.location.search.includes('id=r05')) jQuery('#r05').show();
-    else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
-    else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
-    else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
-    else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
-    else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
-    else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
-    else if (window.location.search.includes('id=r12')) jQuery('#r12').show();
-    else if (window.location.search.includes('id=r13')) jQuery('#r13').show();
-    else if (window.location.search.includes('id=r14')) jQuery('#r14').show();
-    else jQuery('#not-found').show();
+    jQuery('#not-found').show();
   });
 </script>
-<div id="r01" style="display: none">
-  <h3>Round 1</h3>
-  <p>Today we played our first game of the season. It rained for a fair part of the day but lucky for us, we got no rain for the game.</p>
-  <p>We started the game really well. Our more experienced girls took charge and controlled the game. We had a very good lead at quarter time.</p>
-  <p>
-    After the first quarter and with a big lead, we mixed things up and moved everyone around and gave some of our less experienced players more opportunities
-    to play on the ball. We continued to dominate the game with all players having a go and making the most of it when the ball came their way. Nice to see some
-    of our quieter girls coming out of their shells.
-  </p>
-  <p>We have definitely improved since our practice match which was very encouraging to see.</p>
-  <p>Goals. Haylee 6, Shaylee 5, Matilda 2, Milly 2, Tiarnah, Jess</p>
-  <p>Best. Matilda, Haylee, Chloe, Milly, Shaylee, Jade, Gemma</p>
-</div>
-<div id="r02" style="display: none">
-  <h3>Round 2</h3>
-  <p>Today we played Boronia at their senior ground which is a big ground.</p>
-  <p>We had a few players out so we only had 16 players against 20 for Boronia so we played with no bench.</p>
-  <p>We knew it was going to be a tough game with Boronia winning the flag last year and them having girls resting on the bench.</p>
-  <p>We went in with a very positive attitude and to try and play the best we can and making sure we talked and helped each other.</p>
-  <p>We started really well. It was pretty close in the first quarter but we worked a little bit harder to get a good lead at quarter time.</p>
-  <p>The second quarter was very even again but as we got tired, Boronia were able to kick a couple of goals to even things up at half time.</p>
-  <p>The second half was challenging for us and you could see the girls getting tired as the game went on, having no bench to rest the players.</p>
-  <p>Boronia probably had a bit more of the ball than us but our backline stood strong and did an amazing job to stop them kicking goals.</p>
-  <p>It was a very close finish but we ended up winning by 3 points even though the other team had more scoring shots.</p>
-  <p>The game could&rsquo;ve gone either way and luckily for us, it went our way.</p>
-  <p>Goals. Haylee, Matilda, Shaylee</p>
-  <p>Best. Matilda, Shaylee, Haylee, Milly, Chloe, Ella, Saanvi, Tiarnah.</p>
-</div>
-<div id="r03" style="display: none">
-  <h3>Round 3</h3>
-  <p>
-    It was a really nice day for footy and with the girls having a well fought out win last week, their confidence was high and were looking forward to having a
-    good game.
-  </p>
-  <p>
-    Montrose started very strong so it was a good contest by both sides. We were working hard but we just fell down in a couple of areas which enabled Montrose
-    to be in front.
-  </p>
-  <p>
-    The game continued in the same fashion. It was very close but they just had the upper hand on us when we weren&rsquo;t as good as we needed to be in a
-    couple of areas.
-  </p>
-  <p>
-    We fought the game right out and had more of the ball in the last quarter but couldn&rsquo;t get the goals on the board that we needed. We ended up losing
-    by 4 points.
-  </p>
-  <p>
-    The areas that we feel done on are only small things so if the girls work hard at training, I&rsquo;m sure we can improve on these and play more
-    consistently.
-  </p>
-  <p>Goals. Haylee 2, Jade.</p>
-  <p>Best. Haylee, Milly, Jade, Chloe, Gemma, Tiarnah, Keelie</p>
-</div>
-<div id="r04" style="display: none">
-  <h3>Round 4</h3>
-  <p>An absolutely awesome day to play footy and pay tribute to ANZAC Day.</p>
-  <p>Our warm up today was very ordinary so I was a little worried how the girls would start the day.</p>
-  <p>I gave them a bit of a razz up before the game hoping it would switch them on a bit more.</p>
-  <p>
-    Luckily we started the game quite well. Both teams came out working hard and applying lots of pressure. We were winning a bit more of the ball so we came in
-    at quarter time up on the scoreboard. We were able to keep playing at the same level for most of the game so there were times that Chirnside Park were in
-    control of the play but we were definitely in control of the play more often than Chirnside Park. Each quarter we were able to extend our lead to have a
-    really good win 69-32.
-  </p>
-  <p>They are still a few things we need to work on to improve but most of our game was really good.</p>
-  <p>Goals. Haylee 6, Shaylee 2, Chloe, Lara</p>
-  <p>Best. Haylee, Milly, Matilda, Chloe, Shaylee, Jade, Shae, Sanvi, Riann, Lara</p>
-</div>
-<div id="r05" style="display: none">
-  <h3>Round 5</h3>
-  <p>We played South Croydon at home today.</p>
-  <p>Another really nice day for footy. Croydon South are a good team so we knew it was going to be a tough game today.</p>
-  <p>
-    The game started pretty even. Both teams had their moments when they had more of the ball. We had it a bit more in the first half of the quarter and Croydon
-    South in the second half of the quarter. Through inaccurate kicking by the other team, we were in front at quarter time.
-  </p>
-  <p>
-    The second quarter was the same as the first. Both teams had their moments but Croydon South were just working a little bit harder than us so able to get
-    the ball a bit more. This seemed to be the way the game continued in the second half. We were playing well at times but not nearly enough to try and reduce
-    Croydon South&rsquo;s lead and they increased their lead even more. The other team came home with a fairly relaxed win as they did control a lot more of the
-    ball than we did.
-  </p>
-  <p>
-    On reflection, we didn't have enough players that stood up. We probably had 6 solid performers for the day and that&rsquo;s not enough against the good
-    sides. It's really a few small things we need to get much better at but it definitely hurts our performance when we don&rsquo;t have enough players doing
-    them.
-  </p>
-  <p>We lost 40-16</p>
-  <p>Goals. Haylee 2</p>
-  <p>Best. Haylee, Matilda, Milly, Chloe, Tiarnah, Jade, Keelie, Keely</p>
-</div>
-<div id="r06" style="display: none">
-  <h3>Round 6</h3>
-  <p>Today we played Montrose at their home ground.</p>
-  <p>
-    We had 5 players out due to injury or being sick so we weren&rsquo;t flush with numbers. One of the girls away was our captain so I was really keen for the
-    girls to lift to help cover the leadership we get from our captain.
-  </p>
-  <p>Our warm up wasn&rsquo;t great so I was a little worried that we weren&rsquo;t focused enough to start the game.</p>
-  <p>Much to my surprise, our leadership group started really well and set the tone for the other girls.</p>
-  <p>It was a very even game so it was going to come down to which team would do more things right and minimise the things they don&rsquo;t do so well.</p>
-  <p>
-    We took an early lead and we were able to maintain that for most of the game. We only had 1 on the bench compared to their 6 so I was a little concerned how
-    we would play the game out. As the game went on, Montrose started to close in on the lead we had. We lost a player due to injury and then we lost another,
-    so we played most of the last quarter with 1 player less than Montrose on the field.
-  </p>
-  <p>When things got really hard, I was really impressed that they all dug deep and pushed right to the end of the game. We ended up with a win by 3 points.</p>
-  <p>Score 17 &ndash; 14</p>
-  <p>Goals. Shaylee 2</p>
-  <p>Best. Keely, Ella, Milly, Shaylee, Jade, Haylee, Tiarnah,Chloe.</p>
-</div>
-<div id="r07" style="display: none">
-  <h3>Round 7</h3>
-  <p>
-    ​Today we played Boronia at their home ground. Last time we played them we had a very close game so I was expecting another close one. It was a wet wintery
-    day so just hoping it wasn&rsquo;t going to rain too much when we played.
-  </p>
-  <p>
-    Boronia got off to a better start than us. Their want and desire to get the ball was at a higher level than ours so they were winning the ball more often
-    than us. We weren&rsquo;t manning up enough so Boronia were taking advantage of their loose players. Although we weren&rsquo;t down by much at quarter time,
-    we definitely had less of the ball. It was a similar result in the second quarter. Through our lack of talk, we lacked confidence to get the ball so once
-    again, we were having to tackle the opposition rather than getting the ball ourselves and kicking it our way.
-  </p>
-  <p>
-    After a chat at half time, I was hoping to turn things around but that didn&rsquo;t happen. Unfortunately &nbsp;that didn&rsquo;t happen so the backline had
-    their work cut out for them.
-  </p>
-  <p>
-    In the last quarter, Boronia scored a couple of quick goals so it was looking like it might blow out a bit but credit to the girls, they dug deep and we
-    were able to kick a couple of goals to narrow the lead. Unfortunately, they were just too strong for us and we went down 41-18.
-  </p>
-  <p>Goals. Haylee 2, Shaylee.</p>
-  <p>Best. Milly, Chloe, Haylee, Ella, Keely, Tiarnah, Jade, Shelby, Shaylee</p>
-</div>
-<div id="r08" style="display: none">
-  <h3>Round 8</h3>
-  <p>
-    Today was a big game for our team. We were playing Waverley Blues at home and we had heard they were a pretty quick team so we needed to be on the ball.
-  </p>
-  <p>
-    We also had our captain Matilda playing her 100th game so that was exciting for the playing group but gave us a little more reason to play well and
-    hopefully get the win.
-  </p>
-  <p>
-    The game started how most games do. Both teams were full of energy and showed a lot of eagerness to get the ball. It was pretty even for most of the quarter
-    but there were times we had a bit more of the ball which helped us get an early lead at quarter time. The second quarter was pretty similar but it seemed
-    like there was a scoring end and Waverly was kicking to that end so they caught back our lead to be even at half time.
-  </p>
-  <p>The third quarter was very even again but we had the scoring end so we were able to get a 2 goal lead by three quarter time.</p>
-  <p>
-    We needed to dig deep and the last quarter to try and hold onto our lead. We didn&rsquo;t start the last quarter very well at all. We seemed to lose our
-    concentration for a bit so we weren&rsquo;t picking up our players or attacking the ball how we should so Waverley had a lot of the ball for the first part
-    of the last quarter. A little lucky for us that they missed a couple of shots for goal so we stayed in front. Once we switched back on, we got back to doing
-    what we needed to do and managed to kick a couple of goals making sure we won the game. We won 47-33.
-  </p>
-  <p>We had a lot of girls step up today which really made a difference for our team.</p>
-  <p>One of our best team efforts this year so far.</p>
-  <p>Goals. Haylee 3, Shaylee 2, Milly, Tiarnah.</p>
-  <p>Best. Carly, Milly, Jade, Keely, Lara, Matilda, Haylee, Shaylee, Chloe, Tiarnah</p>
-</div>
-<div id="r09" style="display: none">
-  <h3>Round 9</h3>
-  <p>This Round is a BYE</p>
-</div>
-<div id="r10" style="display: none">
-  <h3>Round 10</h3>
-  <p>We played Montrose at home today.</p>
-  <p>Definitely starting to feel like winter now as it was really cold but no rain which was good and the ground was in good condition.</p>
-  <p>We were really looking to play well today to put ourselves in a good position to play finals and it was also Carly&rsquo;s 50th game.</p>
-  <p>
-    We started really well. The girls were working hard and supporting each other and we had a lot of the ball. Unfortunately we were unable to kick any goals
-    and Montrose kicked a late goal to take the lead at quarter time.
-  </p>
-  <p>
-    In the second quarter, our effort levels dropped and Montrose were able to win more of the ball and kick some more goals. This trend continued for the rest
-    of the game. We did have a few really good moments but not nearly enough to change the outcome.
-  </p>
-  <p>We lost 37-13.</p>
-  <p>
-    We definitely have the ability to play a lot better than how we played today. A fair few of the players &nbsp;also realised that our effort level
-    wasn&rsquo;t good enough today so this gives us an opportunity to work on this at training and improve in that area.
-  </p>
-  <p>With the other sides all improving, we need to improve as well to stay competitive.</p>
-  <p>Hopefully we can bounce back next week.</p>
-</div>
-<div id="r11" style="display: none">
-  <h3>Round 11</h3>
-  <p>Today we played South Croydon at their home ground.</p>
-  <p>I was away on holidays so my assistant coaches Daniel and Brent coached the girls.</p>
-  <p>South Croydon were on top of the ladder so it was always going to be a tough game.</p>
-  <p>We did lose 56-30 but the coaches for the day said they tried hard all day, we were just beaten by a better team.</p>
-  <p>Best. Milly, Matilda, Chloe, Riann, Lara, Ella, Shaylee, Haylee</p>
-  <p>Goals. Haylee 2, Lara 2,Shaylee</p>
-</div>
-<div id="r12" style="display: none">
-  <h3>Round 12</h3>
-  <p>Today we had Boronia at their big senior ground. It was a very cold winter day so we needed to get ourselves up for the challenge.</p>
-  <p>We really wanted a win today to increase our chances of making the finals.</p>
-  <p>
-    We started very well and the first quarter was very even. At quarter time we talked about what was working well for us and things we needed to improve to
-    play better footy.
-  </p>
-  <p>
-    The first half of the second quarter was tight so it was anyone&rsquo;s game but in the second half of the quarter, Boronia edged away. They were just a bit
-    more disciplined than us and that makes a difference in these wet, cold conditions. They got the lead on us at half time.
-  </p>
-  <p>
-    The second half continued in the same fashion. Boronia were just working a bit harder than us resulting in them having a bit more of the ball. We kept
-    trying all game but didn&rsquo;t quite have what we needed to claw back their lead.
-  </p>
-  <p>We went down 26-0.</p>
-  <p>Best. Matilda, Keelie, Chloe, Shaylee, Riann, Gemma, Ella, Mia, Ella</p>
-</div>
-<div id="r13" style="display: none">
-  <h3>Round 13</h3>
-  <p>This round was a BYE</p>
-</div>
-<div id="r14" style="display: none">
-  <h3>Round 14</h3>
-  <p>For our last game of the year we played against Waverley Blues at their ground.</p>
-  <p>With all the rain that we have had, their ground like most of the other grounds was starting to get a bit muddy.</p>
-  <p>We were looking to have a really good last game and hopefully finish the season with a win.</p>
-  <p>Our warmup wasn&rsquo;t great but after a little rev up, we were warming up and moving the ball quite well.</p>
-  <p>I told the girls it was just going to come down to how much effort they were willing to put in as to how we would go today.</p>
-  <p>
-    We started the game ok. Matched them in most areas but when our effort level wasn&rsquo;t up to the standard we needed to be at, Waverley were able to get
-    it in their forward line and try to score. We weren&rsquo;t down by much at quarter time but Waverley definitely had more of the ball.
-  </p>
-  <p>The second quarter was much the same. We had some good patches but overall, we weren&rsquo;t working hard enough to win more of the ball.</p>
-  <p>We had a good chat at half time to try and turn things around.</p>
-  <p>Unfortunately Waverley&rsquo;s confidence was up and they continued to win more of the ball.</p>
-  <p>In the last quarter, we had some really good passages of play but were not able to peg back their lead.</p>
-  <p>We ended up losing 51-14.</p>
-  <p>Best. Millie, Haylee, Matilda, Chloe, Ella, Shaylee.</p>
-  <p>Goals. Haylee, Lara &nbsp;</p>
-</div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
   <p>Sorry, we couldn't find a matching match report.</p>
