--- a/teams.html
+++ b/teams.html
@@ -2,283 +2,73 @@
   <tbody class="row-hover">
     <tr class="row-1 odd">
       <td class="column-1"><h4>Under 8 Mixed</h4></td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u8/9792c244"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u8-eastern/a86c348e"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u8/9792c244/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </td>
-      <td class="column-5"><a href="2024-u08m-team" target="_self" class="btn small-btn">Team Page</a></td>
+      <td class="column-2">Fixture: TBD</td>
+      <td class="column-2">Results: TBD</td>
+      <td class="column-2">Ladder: TBD</td>
+      <td class="column-5"><a href="2025-u08m-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-2 even">
       <td class="column-1"><h4>Under 9 Mixed</h4></td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u9/ce5a339a"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u9-black/0f9d1f9b"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u9/ce5a339a/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </td>
-      <td class="column-5"><a href="2024-u09m-team" target="_self" class="btn small-btn">Team Page</a></td>
+      <td class="column-2">Fixture: TBD</td>
+      <td class="column-2">Results: TBD</td>
+      <td class="column-2">Ladder: TBD</td>
+      <td class="column-5"><a href="2025-u09m-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-3 odd">
       <td class="column-1"><h4>Under 10 Mixed</h4></td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u10/66f37103"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u10-red/6bc6370d"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u10/66f37103/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </td>
-      <td class="column-5"><a href="2024-u10m-team" target="_self" class="btn small-btn">Team Page</a></td>
+      <td class="column-2">Fixture: TBD</td>
+      <td class="column-2">Results: TBD</td>
+      <td class="column-2">Ladder: TBD</td>
+      <td class="column-5"><a href="2025-u10m-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-4 even">
       <td class="column-1"><h4>Under 11 Mixed</h4></td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u11/09b1f857"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u11-d/b97574ba"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u11/09b1f857/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </td>
-      <td class="column-5"><a href="2024-u11m-team" target="_self" class="btn small-btn">Team Page</a></td>
+      <td class="column-2">Fixture: TBD</td>
+      <td class="column-2">Results: TBD</td>
+      <td class="column-2">Ladder: TBD</td>
+      <td class="column-5"><a href="2025-u11m-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-5 odd">
-      <td class="column-1"><h4>Under 12 Mixed</h4></td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u12/dadcfd68"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u12-c/f29298dc"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u12/dadcfd68/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </td>
-      <td class="column-5"><a href="2024-u12m-team" target="_self" class="btn small-btn">Team Page</a></td>
+      <td class="column-1"><h4>Under 12 Girls</h4></td>
+      <td class="column-2">Fixture: TBD</td>
+      <td class="column-2">Results: TBD</td>
+      <td class="column-2">Ladder: TBD</td>
+      <td class="column-5"><a href="2025-u12g-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-6 even">
-      <td class="column-1"><h4>Under 13 Boys</h4></td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u13/73911503"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u13-c/09e8a689"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u13/73911503/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </td>
-      <td class="column-5"><a href="2024-u13b-team" target="_self" class="btn small-btn">Team Page</a></td>
+      <td class="column-1"><h4>Under 12 Mixed</h4></td>
+      <td class="column-2">Fixture: TBD</td>
+      <td class="column-2">Results: TBD</td>
+      <td class="column-2">Ladder: TBD</td>
+      <td class="column-5"><a href="2025-u12m-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-7 odd">
-      <td class="column-1"><h4>Under 14 Girls</h4></td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u14-girls/cbd052ea"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u14-girls-d/7f0d82ff"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u14-girls/cbd052ea/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </td>
-      <td class="column-5"><a href="2024-u14g-team" target="_self" class="btn small-btn">Team Page</a></td>
+      <td class="column-1"><h4>Under 13 Boys</h4></td>
+      <td class="column-2">Fixture: TBD</td>
+      <td class="column-2">Results: TBD</td>
+      <td class="column-2">Ladder: TBD</td>
+      <td class="column-5"><a href="2025-u13b-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-8 even">
-      <td class="column-1"><h4>Under 15 Boys</h4></td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u15/c31ef5be"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u15-d/86b3dc5a"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u15/c31ef5be/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </td>
-      <td class="column-5"><a href="2024-u15b-team" target="_self" class="btn small-btn">Team Page</a></td>
+      <td class="column-1"><h4>Under 14 Boys</h4></td>
+      <td class="column-2">Fixture: TBD</td>
+      <td class="column-2">Results: TBD</td>
+      <td class="column-2">Ladder: TBD</td>
+      <td class="column-5"><a href="2025-u14b-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-9 odd">
-      <td class="column-1"><h4>Under 16 Girls</h4></td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u16-girls/5bf379ce"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/deakin-uni-u16-girls-c/fad33218"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u16-girls/5bf379ce/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </td>
-      <td class="column-5"><a href="2024-u16g-team" target="_self" class="btn small-btn">Team Page</a></td>
+      <td class="column-1"><h4>Under 16 Boys</h4></td>
+      <td class="column-2">Fixture: TBD</td>
+      <td class="column-2">Results: TBD</td>
+      <td class="column-2">Ladder: TBD</td>
+      <td class="column-5"><a href="2025-u16b-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
     <tr class="row-10 even">
-      <td class="column-1"><h4>Under 17.5 Boys</h4></td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u175/dc8fc984"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u175-d/c58dbe8f"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </td>
-      <td class="column-2">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u175/dc8fc984/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </td>
-      <td class="column-5"><a href="2024-u17.5b-team" target="_self" class="btn small-btn">Team Page</a></td>
+      <td class="column-1"><h4>Under 16 Girls</h4></td>
+      <td class="column-2">Fixture: TBD</td>
+      <td class="column-2">Results: TBD</td>
+      <td class="column-2">Ladder: TBD</td>
+      <td class="column-5"><a href="2025-u16g-team" target="_self" class="btn small-btn">Team Page</a></td>
     </tr>
   </tbody>
 </table>
