--- a/contact-us.html
+++ b/contact-us.html
@@ -1,11 +1,12 @@
-<h2>2024 EXECUTIVE COMMITTEE</h2>
+<h2>2025 EXECUTIVE COMMITTEE</h2>
 <ul>
-  <li>
-    <span class="contact">President: </span
-    ><span class="nowrap"><a href="mailto:president@bayswaterjfc.com.au" rel="nofollow">Beccy Dawber</a> - <a href="tel:0401 306 209">0401 306 209</a></span>
-  </li>
+  <li><span class="contact">President: </span><span class="nowrap">TBD</span></li>
   <li>
     <span class="contact">Vice President: </span><span class="nowrap"><a href="mailto:vicepresident@bayswaterjfc.com.au" rel="nofollow">Ben Beveridge</a></span>
+  </li>
+  <li>
+    <span class="contact">Secretary: </span
+    ><span class="nowrap"><a href="mailto:president@bayswaterjfc.com.au" rel="nofollow">Beccy Dawber</a> - <a href="tel:0401 306 209">0401 306 209</a></span>
   </li>
   <li>
     <span class="contact">Secretary: </span
@@ -22,57 +23,47 @@
     >
   </li>
 </ul>
-<h2>2024 GENERAL COMMITTEE MEMBERS</h2>
+<h2>2025 GENERAL COMMITTEE MEMBERS</h2>
 <ul>
   <li>
-    <span class="contact">Auskick Coordinator: </span><span class="nowrap"><a href="mailto:auskick@bayswaterjfc.com.au" rel="nofollow">Hannah Watkins</a></span>
+    <span class="contact">Auskick Coordinator: </span><span class="nowrap"><a href="mailto:auskick@bayswaterjfc.com.au" rel="nofollow">Ridd Jennifer</a></span>
   </li>
-  <li>
-    <span class="contact">Child Safety Officer: </span><span class="nowrap">Wendy Gielen - <a href="tel:0414 747 608">0414 747 608</a></span>
-  </li>
+  <li><span class="contact">Child Safety Officer: </span><span class="nowrap">Renae Jolly</span></li>
   <li><span class="contact">Head Trainer: </span><span class="nowrap">TBD</span></li>
   <li><span class="contact">Senior Liaison: </span><span class="nowrap">Jono Merry</span></li>
-  <li>
-    <span class="contact">Marketing Coordinator: </span><span class="nowrap">Sally Delbridge - <a href="tel:0403 695 229">0403 695 229</a></span>
-  </li>
+  <li><span class="contact">Sponsorship Coordinator: </span><span class="nowrap">Lyndal Jones</span></li>
+  <li><span class="contact">Sponsorship Coordinator: </span><span class="nowrap">Shaun Jones</span></li>
+  <li><span class="contact">Social Media Coordinator: </span><span class="nowrap">Jono Merry</span></li>
   <li><span class="contact">Grants Coordinator: </span><span class="nowrap">Wendy Gielen</span></li>
   <li>
-    <span class="contact">Merchandise & Uniform Coordinator: </span><span class="nowrap">Narelle Armstrong - <a href="tel:0411 747 535">0411 747 535</a></span>
+    <span class="contact">Merchandise & Uniform Coordinator: </span><span class="nowrap">Julie Humble - <a href="tel:0411489201">0411489201</a></span>
   </li>
   <li><span class="contact">Website Administrator: </span><span class="nowrap">Lara Robertson</span></li>
-  <li><span class="contact">Bar Manager: </span><span class="nowrap">Jeff Murray</span></li>
-  <li><span class="contact">General Committee: </span><span class="nowrap">Brent Armstrong</span></li>
-  <li><span class="contact">General Committee: </span><span class="nowrap">Shaun Jones</span></li>
+  <li><span class="contact">Bar Manager: </span><span class="nowrap">TBD</span></li>
+  <li><span class="contact">General Committee: </span><span class="nowrap">Mandy Beattie</span></li>
+  <li><span class="contact">General Committee: </span><span class="nowrap">Jake Dawber</span></li>
   <li><span class="contact">General Committee: </span><span class="nowrap">Peter Maloney</span></li>
 </ul>
-<h2>2024 COACHES</h2>
+<h2>2025 COACHES</h2>
 <ul>
+  <li><span class="contact">Under 8 Mixed Coach: </span><span class="nowrap">Dale Kilpatrick</span></li>
   <li>
-    <span class="contact">Under 8 Mixed Coach: </span><span class="nowrap">Mark Lowe - <a href="tel:0410 503 261">0410 503 261</a></span>
+    <span class="contact">Under 9 Mixed Coach: </span><span class="nowrap">Mark Lowe - <a href="tel:0410 503 261">0410 503 261</a></span>
   </li>
   <li>
-    <span class="contact">Under 9 Mixed Coach: </span><span class="nowrap">Daniel Fitzpatrick - <a href="tel:0428 115 998">0428 115 998</a></span>
+    <span class="contact">Under 10 Mixed Coach: </span><span class="nowrap">Daniel Fitzpatrick - <a href="tel:0428 115 998">0428 115 998</a></span>
   </li>
   <li>
-    <span class="contact">Under 10 Mixed Coach: </span><span class="nowrap">Chris Bartling - <a href="tel:0417 575 569">0417 575 569</a></span>
+    <span class="contact">Under 11 Mixed Coach: </span><span class="nowrap">Chris Bartling - <a href="tel:0417 575 569">0417 575 569</a></span>
   </li>
+  <li><span class="contact">Under 12 Girls Coach: </span><span class="nowrap">Ben Beveridge</span></li>
   <li>
-    <span class="contact">Under 11 Mixed Coach: </span><span class="nowrap">Mark Randall - <a href="tel:0423 442 051">0423 442 051</a></span>
+    <span class="contact">Under 12 Mixed Coach: </span><span class="nowrap">Mark Randall - <a href="tel:0423 442 051">0423 442 051</a></span>
   </li>
-  <li>
-    <span class="contact">Under 12 Mixed Coach: </span><span class="nowrap">Tim Cincotta - <a href="tel:0413 886 251">0413 886 251</a></span>
-  </li>
-  <li><span class="contact">Under 13 Boys Coach: </span><span class="nowrap">Ben Beveridge</span></li>
-  <li>
-    <span class="contact">Under 14 Girls Coach: </span><span class="nowrap">Max Mena - <a href="tel:0407 838 486">0407 838 486</a></span>
-  </li>
-  <li><span class="contact">Under 15 Boys Coach: </span><span class="nowrap">Luke Penn</span></li>
-  <li>
-    <span class="contact">Under 16 Girls Coach: </span><span class="nowrap">Michael Hughson - <a href="tel:0401 995 003">0401 995 003</a></span>
-  </li>
-  <li>
-    <span class="contact">Under 17.5 Boys Coach: </span><span class="nowrap">Rick Smith - <a href="tel:0400 414 010">0400 414 010</a></span>
-  </li>
+  <li><span class="contact">Under 13 Boys Coach: </span><span class="nowrap">Mark Hindson</span></li>
+  <li><span class="contact">Under 14 Boys Coach: </span><span class="nowrap">Gavin Wootten</span></li>
+  <li><span class="contact">Under 16 Boys Coach: </span><span class="nowrap">Jake Dawber</span></li>
+  <li><span class="contact">Under 16 Girls Coach: </span><span class="nowrap">Scott Jolly</span></li>
 </ul>
 <iframe
   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3150.9371551710783!2d145.26563171539826!3d-37.838357079747716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad63ba0607a8b73%3A0xf291f345abb41dca!2sBayswater+Junior+Football+Club!5e0!3m2!1sen!2sau!4v1521517748227"
