--- a/teams-u09m.html
+++ b/teams-u09m.html
@@ -2,70 +2,28 @@
   <div class="col1">
     <h3 style="margin-top: 10px">CONTACTS</h3>
     <ul>
+      <li><b>Team Manager: </b><span class="nowrap">TBD</span></li>
       <li>
-        <b>Team Manager: </b><span class="nowrap">Clare Griffin - <a href="tel:0402 719 061">0402 719 061</a></span>
+        <b>Head Coach: </b><span class="nowrap">Mark Lowe - <a href="tel:0410 503 261">0410 503 261</a></span>
       </li>
-      <li>
-        <b>Team Manager: </b><span class="nowrap">Tim Groenewegen - <a href="tel:0417 103 823">0417 103 823</a></span>
-      </li>
-      <li>
-        <b>Head Coach: </b><span class="nowrap">Daniel Fitzpatrick - <a href="tel:0428 115 998">0428 115 998</a></span>
-      </li>
-      <li><b>Assistant Coach: </b><span class="nowrap">Andrew Harrison</span></li>
-      <li><b>Assistant Coach: </b><span class="nowrap">Scott Jolly</span></li>
-      <li><b>Trainer: </b><span class="nowrap">Dale Kilpatrick</span></li>
-      <li><b>Trainer: </b><span class="nowrap">Riley McCracken</span></li>
+      <li><b>Assistant Coach: </b><span class="nowrap">TBD</span></li>
+      <li><b>Trainer: </b><span class="nowrap">Brooke Hay</span></li>
     </ul>
   </div>
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">Friday 6pm - 7pm</p>
+      <p style="margin: 0">Friday</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
-      <p style="margin: 0">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u9/ce5a339a"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </p>
-      <p style="margin: 0">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u9-black/0f9d1f9b"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </p>
-      <p style="margin: 0">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u9/ce5a339a/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </p>
+      <p style="margin: 0">Fixture: TBD</p>
+      <p style="margin: 0">Results: TBD</p>
+      <p style="margin: 0">Ladder: TBD</p>
     </div>
   </div>
 </div>
 <div>
   <h3 style="margin-top: 10px">MATCH REPORTS</h3>
-  <ul style="column-count: 3">
-    <li><a href="/u09m-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r03" rel="nofollow">Round 3 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r04" rel="nofollow">Round 4 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r05" rel="nofollow">Round 5 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r08" rel="nofollow">Round 8 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r09" rel="nofollow">Round 9 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r10" rel="nofollow">Round 10 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r11" rel="nofollow">Round 11 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r13" rel="nofollow">Round 13 Match Report</a></li>
-    <li><a href="/u09m-match-report/?id=r14" rel="nofollow">Round 14 Match Report</a></li>
-  </ul>
+  <p>Coming Soon...</p>
 </div>
