--- a/teams-u11m.html
+++ b/teams-u11m.html
@@ -2,70 +2,28 @@
   <div class="col1">
     <h3 style="margin-top: 10px">CONTACTS</h3>
     <ul>
+      <li><b>Team Manager: </b><span class="nowrap">TBD</span></li>
       <li>
-        <b>Team Manager: </b><span class="nowrap">Julie Humble - <a href="tel:0411489201">0411489201</a></span>
+        <b>Head Coach: </b><span class="nowrap">Chris Bartling - <a href="tel:0417 575 569">0417 575 569</a></span>
       </li>
-      <li>
-        <b>Team Manager: </b><span class="nowrap">Jessica Randall - <a href="tel:0421 114 072">0421 114 072</a></span>
-      </li>
-      <li>
-        <b>Head Coach: </b><span class="nowrap">Mark Randall - <a href="tel:0423 442 051">0423 442 051</a></span>
-      </li>
-      <li><b>Assistant Coach: </b><span class="nowrap">Gordon Watt</span></li>
-      <li><b>Trainer: </b><span class="nowrap">Brooke Hay</span></li>
+      <li><b>Assistant Coach: </b><span class="nowrap">TBD</span></li>
+      <li><b>Trainer: </b><span class="nowrap">Greg Latham</span></li>
     </ul>
   </div>
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">Wednesday 6pm - 7pm</p>
+      <p style="margin: 0">Tuesday</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
-      <p style="margin: 0">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u11/09b1f857"
-          rel="noopener"
-          target="_blank"
-          >Fixture</a
-        >
-      </p>
-      <p style="margin: 0">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/eastern-football-netball-league-2024/u11-d/b97574ba"
-          rel="noopener"
-          target="_blank"
-          >Results</a
-        >
-      </p>
-      <p style="margin: 0">
-        <a
-          href="https://www.playhq.com/afl/org/bayswater-eastern-football-netball-league/be1ca5c9/eastern-football-netball-league-2024/teams/bayswater-u11/09b1f857/ladder"
-          rel="noopener"
-          target="_blank"
-          >Ladder</a
-        >
-      </p>
+      <p style="margin: 0">Fixture: TBD</p>
+      <p style="margin: 0">Results: TBD</p>
+      <p style="margin: 0">Ladder: TBD</p>
     </div>
   </div>
 </div>
 <div>
   <h3 style="margin-top: 10px">MATCH REPORTS</h3>
-  <ul style="column-count: 3">
-    <li><a href="/u11m-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r03" rel="nofollow">Round 3 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r04" rel="nofollow">Round 4 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r05" rel="nofollow">Round 5 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r08" rel="nofollow">Round 8 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r09" rel="nofollow">Round 9 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r10" rel="nofollow">Round 10 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r11" rel="nofollow">Round 11 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r12" rel="nofollow">Round 12 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r13" rel="nofollow">Round 13 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=r14" rel="nofollow">Round 14 Match Report</a></li>
-    <li><a href="/u11m-match-report/?id=f01" rel="nofollow">Final (1) Match Report</a></li>
-  </ul>
+  <p>Coming Soon...</p>
 </div>
