--- a/teams-u12m-match-report.html
+++ b/teams-u12m-match-report.html
@@ -1,60 +1,8 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
-    if (window.location.search.includes('id=r02')) jQuery('#r02').show();
-    else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
-    else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
-    else jQuery('#not-found').show();
+    jQuery('#not-found').show();
   });
 </script>
-<div id="r02" style="display: none">
-  <h3>Round 2</h3>
-  <p>
-    Today's game. We ventured out to Narre Warren South Reserve to play Belgrave South. Both teams had 16 players for the game, The first quarter started with
-    Belgrave South dominating with their work in the clearances. Putting our back line under a lot of pressure.
-  </p>
-  <p>
-    The second quarter started the same way the first quarter had with Belgrave South dominating the clearances. All of the backline players kept on trying
-    their hardest to stem the tide.&nbsp;
-  </p>
-  <p>Highlights of our first half were&nbsp;</p>
-  <p>Tigerlily's two fantastic smothers,&nbsp;</p>
-  <p>Dusty's work in the first half was first rate.</p>
-  <p>We made some changes going into the third quarter which worked in our favour.&nbsp;</p>
-  <p>
-    Josh was in and under every contest throughout the third quarter getting the ball out to his teammates. We got on the scoreboard with Xavier kicking the
-    first goal. The hard work continued throughout the quarter with indi's good ruck work.&nbsp;
-  </p>
-  <p>
-    Final quarter started well for us with our midfield getting well in top and giving our forward line the opportunity to further our score. We missed a couple
-    of chances at goal, with Xavier kicking his second goal of the game. The players fort the game out with high spirits and enthusiasm.&nbsp;
-  </p>
-  <p>We played an outstanding team in Belgrave South and we must learn from today's game.</p>
-</div>
-<div id="r06" style="display: none">
-  <h3>Round 6</h3>
-  <p>
-    Hi all.&nbsp;<br />We took on Beaconsfield on their home ground, our first quarter was poor and our intent for the contest was missing. Our tackling was
-    poor too, many not prepared to commit to the tackle. 7 goals to them told the tale. We improved from there on and worked hard in the contest and had a lot
-    of the play, but got no reward for the hard work. The 3rd and 4th quarters were very much the same as the second quarter, lots of hard work but we struggled
-    to string together passages of play. We kept them to 8 goals for the last 3 quarters which was a credit to the team. We must keep working hard on our footy
-    skills, stick together. Noah playing his second game of football was great. Kai had a good game also and Grace had her best game. Will has put together 2
-    good games, but what has impressed me with Will has been his on field communication to his teammates.
-  </p>
-</div>
-<div id="r07" style="display: none">
-  <h3>Round 7</h3>
-  <p>
-    Our first quarter was much better this week, we were hungry for the contest the rain set in and made ball handling difficult. We were level at quarter time
-    2 points a piece, in the 2nd quarter we got stopped in our tracks, too many players at the contest and not playing on their opponent which resulted in
-    Coldstream kicking 3 goals to our nothing. We play on our opponent and not go chasing kicks. The 3rd quarter was like the &nbsp;2nd quarter with Coldstream
-    kicking 2 goals to nil, we were trying hard but kept turning the ball over. The last quarter was a complete turn around from the last 2 quarters our hunger
-    for the footy was outstanding the ball spent most of the quarter in our forward line, brought on by fantastic pressure we finally got rewarded with a goal
-    to Markus which was a great reward for the players and supporters, we scored 1-4 to nothing.we must play 4 quarters of football, well done to all of the
-    players.
-  </p>
-  <p>Liam played a great game, his best for us.</p>
-  <p>Birthday boy Markus played his best game for the season, Hayden also played his best game.</p>
-</div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
   <p>Sorry, we couldn't find a matching match report.</p>
