--- a/teams-u14b.html
+++ b/teams-u14b.html
@@ -3,9 +3,9 @@
     <h3 style="margin-top: 10px">CONTACTS</h3>
     <ul>
       <li><b>Team Manager: </b><span class="nowrap">TBD</span></li>
-      <li><b>Head Coach: </b><span class="nowrap">Mark Hindson</span></li>
-      <li><b>Assistant Coach: </b><span class="nowrap">TBD</span></li>
-      <li><b>Trainer: </b><span class="nowrap">Heather Holdstock</span></li>
+      <li><b>Head Coach: </b><span class="nowrap">Gavin Wootten</span></li>
+      <li><b>Assistant Coach: </b><span class="nowrap">Shaun Torney</span></li>
+      <li><b>Trainer: </b><span class="nowrap">David Glover</span></li>
     </ul>
   </div>
   <div class="col2">
