--- a/contact-us.html
+++ b/contact-us.html
@@ -26,7 +26,7 @@
 <h2>2025 GENERAL COMMITTEE MEMBERS</h2>
 <ul>
   <li>
-    <span class="contact">Auskick Coordinator: </span><span class="nowrap"><a href="mailto:auskick@bayswaterjfc.com.au" rel="nofollow">Ridd Jennifer</a></span>
+    <span class="contact">Auskick Coordinator: </span><span class="nowrap"><a href="mailto:auskick@bayswaterjfc.com.au" rel="nofollow">Jennifer Ridd</a></span>
   </li>
   <li><span class="contact">Child Safety Officer: </span><span class="nowrap">Renae Jolly</span></li>
   <li><span class="contact">Head Trainer: </span><span class="nowrap">TBD</span></li>
@@ -57,11 +57,7 @@
     <span class="contact">Under 11 Mixed Coach: </span><span class="nowrap">Chris Bartling - <a href="tel:0417 575 569">0417 575 569</a></span>
   </li>
   <li><span class="contact">Under 12 Girls Coach: </span><span class="nowrap">Ben Beveridge</span></li>
-  <li>
-    <span class="contact">Under 12 Mixed Coach: </span><span class="nowrap">Mark Randall - <a href="tel:0423 442 051">0423 442 051</a></span>
-  </li>
   <li><span class="contact">Under 13 Boys Coach: </span><span class="nowrap">Mark Hindson</span></li>
-  <li><span class="contact">Under 14 Boys Coach: </span><span class="nowrap">Gavin Wootten</span></li>
   <li><span class="contact">Under 16 Boys Coach: </span><span class="nowrap">Jake Dawber</span></li>
   <li><span class="contact">Under 16 Girls Coach: </span><span class="nowrap">Scott Jolly</span></li>
 </ul>
